<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclcpp_template</name>
  <version>1.0.0</version>
  <description>Package which holds template for ROS Node in cpp</description>

  <maintainer email="patiladitya1309@gmail.com">aditya</maintainer>
  <license>MIT</license>
  <url type="website">https://www.linkedin.com/in/aditya-patil-13207b201/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
